--- a/index.html
+++ b/index.html
@@ -12,53 +12,62 @@
 </head>
 <body>
 
+<div class="container">
+<div class="table-responsive-sm">
+    <table class="table table-hover ">
+        <thead>
+        <tr  style="border-top: hidden;">
+            <th scope="row" colspan="2">
+                <h2>Mesut Kuscu</h2>
+            </th>
+            <!--<th scope=""></th>-->
+        </tr>
+        <tr style="border-top: hidden;">
+            <!--<th scope="col"></th>-->
+            <th scope="row" colspan="2">
+                <div class="small"> Munich, Germany | kuscumesut@outlook.de | +49 162 2637044 </div>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">Professional Objective</th>
+            <td>bla bla</td>
+        </tr>
+        <tr>
+            <th scope="row">Education</th>
+            <td>ontrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
-<div class = "container">
-    <div class = "row">
-        <div class="col">
-            <h1>Mesut Kuscu</h1>
-        </div>
-    </div>
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</td>
+        </tr>
+        <tr>
+            <th scope="row">Experience</th>
+            <td>Larry</td>
+        </tr>
+        <tr>
+            <th scope="row">Publications</th>
+            <td>Larry</td>
+        </tr>
+        <tr>
+            <th scope="row">Programming Languages</th>
+            <td>
 
-    <div class="row justify-content-end small">
-        <div class="col text-right">Munich, Germany | kuscumesut@outlook.de | +491622637044 </div>
-        <div class="w-100"><hr></div>
-    </div>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Technologies</th>
+            <td>
 
-    <div class="row">
-        <!--1 Section-->
-        <div class="col-2">
-            <h5>Professional Objective</h5>
-        </div>
-        <div class="col-sm-10">
-            <p>To write code and do research which helps human beings.</p>
-        </div>
-        <div class="w-100"><hr></div>
-
-        <!--2 Section-->
-        <div class="col-2">
-            <h5>Professional Objective</h5>
-        </div>
-        <div class="col-sm-10">
-            To write code and do research which helps human beings.
-        </div>
-        <div class="w-100"><hr></div>
-        <!--3 Section-->
-        <div class="col-2">
-            <h5>Professional Objective</h5>
-        </div>
-        <div class="col-sm-10">
-            To write code and do research which helps human beings.
-        </div>
-        <div class="w-100"><hr></div>
-
-    </div>
-
-
-
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Hobbies</th>
+            <td>Larry</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-
-
+</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
