Added responsive table as backbone for whole structure.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,32 @@
             <th scope="row">Technologies</th>
             <td>
 
+                <table class="table table-sm border-top-O">
+                    <thead>
+                    <tr>
+                        <th scope="col">Proficient</th>
+                        <th scope="col">Knowledgeable</th>
+                        <th scope="col">Exposure</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                    </tbody>
+                </table>
+
             </td>
         </tr>
         <tr>
